# notepad-ai

./: .gitignore  GrabCodes.py  bundle_prompt.py  index.html  package-lock.json  package.json  readme.md  tsconfig.json
backup/150426025107/: app.tsx
backup/150426032737/: app.tsx  main.rs
notes_test/TEMP_2026-02-10T22-40/: raw_note.txt
notes_test/TEMP_2026-02-10T23-07/: raw_note.txt
notes_test/TEMP_2026-02-10T23-08/: List.txt  raw_note.txt
notes_test/TEMP_2026-02-10T23-33/: raw_note.txt
notes_test/inbox/: note-20260128-035635.md
src/: App.css  App.tsx  app.css  app.tsx  index.css  main.tsx
src-tauri/: Cargo 2.toml  Cargo.toml  tauri.conf 2.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/notes_test/TEMP_2026-02-09T17-41/: raw_note.txt
src-tauri/notes_test/TEMP_2026-02-09T17-49/: raw_note.txt
src-tauri/notes_test/TEMP_2026-02-09T17-51/: raw_note.txt
src-tauri/src/: main.rs
