[package]
name = "notepad-ai"
version = "0.1.0"
description = "A Zero-Friction AI Notepad"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0"

tauri-plugin-dialog = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1"
# --- NEW ADDITIONS FOR PHASE 2 ---
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
